# ouman-eh-800-api

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/ouman_eh_800_api/: __init__.py  client.py  const.py  endpoint.py  exceptions.py  registry.py
tests/: test_client.py  test_registry.py
tests/integration/: conftest.py  test_read.py
