[project]
name = "ouman-eh-800-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Markus Tuominen", email = "3738613+Markus98@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
