[project]
name = "ouman-eh-800-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "Markus Tuominen", email = "3738613+Markus98@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
